--- a/journals/00-ideas.Rmd
+++ b/journals/00-ideas.Rmd
@@ -1,8 +1,12 @@
 ---
 title: "00-ideas"
 author: "Katherine Goode"
-date: "2/12/2019"
-output: html_document
+date: "`r format(Sys.time(), '%B %d, %Y')`"
+output:
+  html_document:
+    toc: true
+    toc_depth: 3
+    toc_float: true
 ---
 
 ```{r setup, include=FALSE}
